# rpgmtranslate-qt

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  resources.qrc
dictionaries/: README.md
docs/docs/: purge.md
resources/: rpgmtranslate-logo.rc
rust/: Cargo.toml  cbindgen.toml
rust/src/: api.rs  ffi.rs  lib.rs
src/: main.cpp
src/AboutWindow/: AboutWindow.cpp  AboutWindow.hpp  AboutWindow.ui
src/AutoUpdater/: AutoUpdater.cpp  AutoUpdater.hpp
src/BatchMenu/: BatchMenu.cpp  BatchMenu.hpp  BatchMenu.ui
src/BookmarkMenu/: BookmarkList.cpp  BookmarkList.hpp  BookmarkMenu.cpp  BookmarkMenu.hpp
src/ColoredTextLabel/: ColoredTextLabel.cpp  ColoredTextLabel.hpp
src/FFILogger/: FFILogger.cpp  FFILogger.hpp
src/FileSelectMenu/: FileSelectMenu.cpp  FileSelectMenu.hpp  FileSelectMenu.ui
src/GlossaryMenu/: GlossaryMenu.cpp  GlossaryMenu.hpp  GlossaryMenu.ui
src/MainWindow/: MainWindow.cpp  MainWindow.hpp  MainWindow.ui
src/MatchMenu/: MatchMenu.cpp  MatchMenu.hpp  MatchTable.cpp  MatchTable.hpp
src/PersistentMenu/: PersistentMenu.cpp  PersistentMenu.hpp
src/PopupInput/: PopupInput.cpp  PopupInput.hpp
src/PurgeMenu/: PurgeMenu.cpp  PurgeMenu.hpp  PurgeMenu.ui
src/ReadMenu/: ReadMenu.cpp  ReadMenu.hpp  ReadMenu.ui
src/SearchMenu/: SearchMenu.cpp  SearchMenu.hpp  SearchMenu.ui
src/SearchPanelDock/: SearchPanelDock.cpp  SearchPanelDock.hpp  SearchResultList.cpp  SearchResultList.hpp
src/Settings/: ProjectSettings.cpp  ProjectSettings.hpp  Settings.cpp  Settings.hpp
src/SettingsWindow/: SettingsWindow.cpp  SettingsWindow.hpp  SettingsWindow.ui
src/TabList/: TabList.cpp  TabList.hpp  TabListDelegate.cpp  TabListDelegate.hpp
src/TabPanel/: TabPanel.cpp  TabPanel.hpp
src/TaskWorker/: TaskWorker.cpp  TaskWorker.hpp
src/TranslationTable/: LabelInput.cpp  LabelInput.hpp  SpellHighlighter.cpp  SpellHighlighter.hpp  TranslationInput.cpp  TranslationInput.hpp  TranslationTable.cpp  TranslationTable.hpp  TranslationTableDelegate.cpp  TranslationTableDelegate.hpp  TranslationTableHeader.cpp  TranslationTableHeader.hpp  TranslationTableModel.cpp  TranslationTableModel.hpp  WhitespaceHighlighter.cpp  WhitespaceHighlighter.hpp
src/TranslationsMenu/: TranslationsMenu.cpp  TranslationsMenu.hpp  TranslationsMenu.ui
src/WriteMenu/: WriteMenu.cpp  WriteMenu.hpp  WriteMenu.ui
src/utilities/: Aliases.hpp  Constants.hpp  Enums.hpp  FWD.hpp  Types.hpp  Utils.cpp  Utils.hpp
src/version/: version.h.in
translations/: rpgmtranslate.en.ts  rpgmtranslate.ru.ts
